Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
See https://ci.appveyor.com/project/ApacheSoftwareFoundation/arrow/builds/35387750
[----------] 3 tests from S3RegionResolutionTest [ RUN ] S3RegionResolutionTest.PublicBucket C:/projects/arrow/cpp/src/arrow/filesystem/s3fs_test.cc(273): error: Failed '_error_or_value55.status()' failed with IOError: When resolving region for bucket 'ursa-labs-taxi-data': AWS Error [code 99]: Encountered network error when sending http request [ FAILED ] S3RegionResolutionTest.PublicBucket (6946 ms) [ RUN ] S3RegionResolutionTest.RestrictedBucket C:/projects/arrow/cpp/src/arrow/filesystem/s3fs_test.cc(283): error: Failed '_error_or_value58.status()' failed with IOError: When resolving region for bucket 'ursa-labs-r-test': AWS Error [code 99]: Encountered network error when sending http request [ FAILED ] S3RegionResolutionTest.RestrictedBucket (7037 ms) [ RUN ] S3RegionResolutionTest.NonExistentBucket [ OK ] S3RegionResolutionTest.NonExistentBucket (178 ms) [----------] 3 tests from S3RegionResolutionTest (14161 ms total)
Traces with S3 logging enabled can be found here: https://ci.appveyor.com/project/pitrou/arrow/builds/35387461?fullLog=true
Attachments
Issue Links
- links to