ARROW-10085: [C++] Fix S3 region resolution on Windows

Avoid trying to following redirects when resolving a region, as that can fail
(at least on Windows with certain AWS SDK versions).

Also skip a test that's failing because of a bug in the AWS SDK on Windows.